welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: Missing closing brace `}' assumed here
 for (compteur <- 1 to 10) { 
 ^